<resources>
    <string name="app_name">GocGod</string>
    <string name="motto">Healthy Drink with Vitamin C and D</string>

    //LOGIN
    <string name="login_user">MASUK</string>
    <string name="logout_user">KELUAR</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nothaveaccount">Belum Punya Akun?</string>
    <string name="register">Daftar</string>
    <string name="profile">Informasi Akun</string>
    <string name="change_password">Ubah Password</string>

    <string name="load_error">Error, koneksi internet bermasalah</string>
    <string name="error">ERROR</string>

    //REGISTER
    <string name="full_name">Nama Lengkap</string>
    <string name="choose_province">Pilih Provinsi</string>
    <string name="choose_city">Pilih Kota</string>
    <string name="choose_district">Pilih Kecamatan</string>
    <string name="address">Alamat</string>
    <string name="phonenumber">Nomor Telepon</string>
    <string name="postalcode">Kode Pos</string>
    <string name="birthdaydate">Tanggal Lahir</string>
    <string name="privacy">Privacy Policy</string>
    <string name="accept_terms">Setuju syarat &amp; ketentuan</string>
    <string name="valid_info">Pastikan data yang Anda masukan benar!</string>



    //MENU
    <string name="product">Produk</string>
    <string name="howToBuy">Cara Berbelanja</string>
    <string name="faq">FAQ</string>
    <string name="location">Lokasi Agen</string>
    <string name="customerOrder">Pesanan Pelanggan</string>

    <string name="button_buy">BELI</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="empty_testimoni">Belum ada ulasan untuk produk ini :(</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    //CART
    <string name="minimum_qty">Anda minimal harus membeli 1 produk</string>
    <string name="added_to_cart">Berhasil ditambah</string>
    <string name="quantity">Quantity</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="total">Total</string>
    <string name="checkout">CHECK OUT</string>
    <string name="deleteItemTitle">Hapus</string>
    <string name="deleteItemMessage">Apakah Anda ingin menghapus produk yang dipilih?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="promo_beli">*Gratis ongkos kirim untuk pembelian dengan total kuantitas lebih dari 5</string>

    <string name="first">Perkenalan</string>
    <string name="single">Sekali Beli</string>
    <string name="subscriber">Berlangganan</string>
    <string name="howtobuy">Cara Berbelanja</string>
</resources>
