<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    app:carbon_insetColor="?attr/colorPrimary"
    android:id="@+id/register_layout">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <carbon.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <carbon.widget.LinearLayout
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/carbon_padding"
            android:orientation="vertical">

            <carbon.widget.EditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintText="@string/choose_province"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintText="@string/choose_city"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintText="@string/choose_district"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <carbon.widget.EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.EditText
                android:id="@+id/postalcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postalcode"
                android:inputType="number"
                app:carbon_minCharacters="5"
                app:carbon_maxCharacters="5"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdaydate"
                android:inputType="date"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.EditText
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phonenumber"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:carbon_errorMessage="it's not an email"
                app:carbon_floatingLabel="true"
                app:carbon_pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,6}$"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                app:carbon_minCharacters="6"
                app:carbon_floatingLabel="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <carbon.widget.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/carbon_textAppearanceCaption"
                android:text="@string/valid_info"
                android:textAlignment="center"/>

            <carbon.widget.Button
                android:id="@+id/privacy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/privacy"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/carbon_Button.Flat"
                android:textColor="@color/carbon_blue_500"
                />

            <carbon.widget.CheckBox
                android:id="@+id/accept_policy"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:checked="false"
                android:text="@string/accept_terms"/>

            <carbon.widget.Button
                android:id="@+id/submit_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/register"
                android:background="@color/colorAccent" />

        </carbon.widget.LinearLayout>

    </carbon.widget.ScrollView>

</carbon.widget.LinearLayout>