<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context="com.gocgod.LoginActivity"
    android:id="@+id/login_layout">

    <carbon.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <carbon.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <carbon.widget.ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/md_white_1000"
                android:background="@drawable/edittext_modified_states"
                />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/md_white_1000"
                android:background="@drawable/edittext_modified_states"
                />

            <carbon.widget.Button
                android:id="@+id/submit_login"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/login_user"
                />

            <carbon.widget.Button
                style="@style/carbon_Button.Flat"
                android:id="@+id/forgot_password_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/carbon_white"
                android:text="forgot password"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:textColor="@color/md_white_1000"
                android:text="@string/nothaveaccount"/>

            <carbon.widget.Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"/>


        </carbon.widget.LinearLayout>

    </carbon.widget.ScrollView>

</carbon.widget.LinearLayout>